[package]
name = "fdnverb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.4.0"
num = "0.4.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
real_time_fir_iir_filters = {version = "1.3.3", features = ["first_order"], default-features = false}
saturation = {version = "0.2.1", features = ["tubes", "alloc"], default-features = false}
delay_line = "0.1.2"
moddef = "0.2.6"
tokio = {version = "1.45.0", features = ["rt"]}
spirv-std = "0.9.0"

[lib]
name = "fdnverb"
crate-type = ["cdylib"]